fix list jump

--- a/src/index.css
+++ b/src/index.css
@@ -81,9 +81,6 @@ ul {
 }
 .grocery-list {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   width: 80%;
   padding: 1rem;
   font-size: 1em;
